@@ -514,7 +514,9 @@ namespace Qyoto {
 			return StaticQApplication().KeyboardInputDirection();
 		}
 		public static new int Exec() {
-			return StaticQApplication().Exec();
+			int result = StaticQApplication().Exec();
+			Qyoto.SetApplicationTerminated();
+			return result;
 		}
 		public static void SetQuitOnLastWindowClosed(bool quit) {
 			StaticQApplication().SetQuitOnLastWindowClosed(quit);
